Name:                Colador
Version:             0.0.1
Synopsis:            Colador History CMS
Description:         A system for putting historical events onto a map.
License:             GPL-3
Author:              Matt J Raibert
Maintainer:          mattraibert@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable colador
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.7   && < 5,
    lens                      >= 4.1   && < 4.2,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap                      == 1.*,
    snap-core                 == 1.*,
    snap-server               == 1.*,
    snap-loader-static        == 1.*,
    heist                     == 1.*,
    snap-testing              == 0.6.*,
    text                      >= 0.11  && < 1.2,
    time                      >= 1.1   && < 1.5,
    xmlhtml                   >= 0.1,
    configurator,
    groundhog                 >= 0.5.0,
    groundhog-th,
    groundhog-postgresql,
    groundhog-utils,
    resource-pool,
    monad-logger,
    digestive-functors,
    digestive-functors-snap,
    digestive-functors-heist,
    aeson

  if flag(development)
    build-depends:
      snap-loader-dynamic == 1.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
